fix(cli:templates): align side-nav resources layout responsiveness

--- a/packages/igx-templates/igx-ts/projects/_base_with_home/files/src/app/home/home.scss
+++ b/packages/igx-templates/igx-ts/projects/_base_with_home/files/src/app/home/home.scss
@@ -102,7 +102,8 @@ h1 {
   }
 
   .home__resources {
-    grid-template-columns: 1fr;
+    grid-template-columns: minmax(0, 300px);
+    justify-content: center;
     gap: 4px;
   }
 }
